--- a/taxonomy/templates/taxonomy/index.html
+++ b/taxonomy/templates/taxonomy/index.html
@@ -95,27 +95,13 @@
                         {% else %}
                             <li class="page-item disabled"> <a class="page-link" href="#" tabindex="-1">&laquo;</a> </li>
                         {% endif %}
-                        {% for i in paginator.page_range %}
-
-                            {% if page_obj.number < 10 %}
-                                {% if forloop.counter < 20 %}
-                                    {% if page_obj.number == i %}
-                                        <li class="page-item active">
-                                            <a class="page-link" href="#">{{ i }} <span class="sr-only">(current)</span></a>
-                                        </li>
-                                    {% else %}
-                                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                                    {% endif %}
-                                {% endif %}
-                            {% elif forloop.counter < page_obj.number|add:"10" and forloop.counter > page_obj.number|add:"-10"  %}
-                                {% if page_obj.number == i %}
-                                    <li class="page-item active">
-                                        <a class="page-link" href="#">{{ i }} <span class="sr-only">(current)</span></a>
-                                    </li>
-
-                                {% else %}
-                                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                                {% endif %}
+                        {% for i in paginator.page_range|slice:view.pagination_slice %}
+                            {% if page_obj.number == i %}
+                                <li class="page-item active">
+                                    <a class="page-link" href="#">{{ i }} <span class="sr-only">(current)</span></a>
+                                </li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
                             {% endif %}
                         {% endfor %}
                         {% if page_obj.has_next %}
