--- a/taxonomy/templates/www/base.html
+++ b/taxonomy/templates/www/base.html
@@ -35,10 +35,10 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item {% if request.get_full_path == '/' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'site-list' %}">Index <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if request.get_full_path == '/api/' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'site-api' %}">API</a>
             </li>
             <li class="nav-item">
