--- a/taxonomy/templates/taxonomy/api.html
+++ b/taxonomy/templates/taxonomy/api.html
@@ -38,7 +38,7 @@
 
         <div class="card mt-3">
             <div class="card-body">
-                <h4 class="card-title">GET /api/lca/</h4>
+                <h4 class="card-title">GET /api/taxonomy/lca/</h4>
                 <h6 class="card-subtitle mb-2 text-muted">Return the last common ancestor taxonomy entry for a list of taxids</h6>
                 <p class="card-text">
                     <b>GET parameters:</b>
