--- a/taxonomy/templates/www/base.html
+++ b/taxonomy/templates/www/base.html
@@ -45,30 +45,31 @@
                 <a class="nav-link" href="/admin/">Admin</a>
             </li>
         </ul>
+        {% if taxonomy_list.exists %}
+            <form class="form-inline my-2 my-lg-0" action="/filter/" method="POST">
+                {% csrf_token %}
+                <select class="form-control mr-sm-2" name="rank" onchange="this.form.submit()">
+                    <option value="">any rank</option>
+                    {% for rank in view.rank_list %}
+                        <option value="{{ rank }}" {% if view.filters.rank == rank %} selected {% endif %}>{{ rank }}</option>
+                    {% endfor %}
+                </select>
+            </form>
+            <form class="form-inline my-2 my-lg-0" action="/filter/" method="POST">
+                {% csrf_token %}
+                <select class="form-control mr-sm-2" name="division" onchange="this.form.submit()">
+                    <option value="">all divisions</option>
+                    {% for division in view.division_list %}
+                        <option value="{{ division.id }}" {% if view.filters.division == division.id|slugify %} selected {% endif %}>{{ division.long }}</option>
 
-        <form class="form-inline my-2 my-lg-0" action="/filter/" method="POST">
-            {% csrf_token %}
-            <select class="form-control mr-sm-2" name="rank" onchange="this.form.submit()">
-                <option value="">any rank</option>
-                {% for rank in view.rank_list %}
-                    <option value="{{ rank }}" {% if view.filters.rank == rank %} selected {% endif %}>{{ rank }}</option>
-                {% endfor %}
-            </select>
-        </form>
-        <form class="form-inline my-2 my-lg-0" action="/filter/" method="POST">
-            {% csrf_token %}
-            <select class="form-control mr-sm-2" name="division" onchange="this.form.submit()">
-                <option value="">all divisions</option>
-                {% for division in view.division_list %}
-                    <option value="{{ division.id }}" {% if view.filters.division == division.id|slugify %} selected {% endif %}>{{ division.long }}</option>
-
-                {% endfor %}
-            </select>
-        </form>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" name="search_string">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
+                    {% endfor %}
+                </select>
+            </form>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" name="search_string">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        {% endif %}
     </div>
 </nav>
 {% block content %}
