--- a/www/templates/www/register.html
+++ b/www/templates/www/register.html
@@ -5,23 +5,24 @@
         <div class="lead">With a token associated to your e-mail account you will get a higher number of API calls per hour.</div>
         {% if msg %}
             <div class="alert alert-success">
-            {{ msg }}
+                {{ msg }}
             </div>
+        {% else %}
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="emailForToken">Email address</label>
+                    <input name='email' type="email" class="form-control" id="emailForToken" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    <span class="text-danger">{{ form.email.errors}}</span>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">(Confirm) Email address</label>
+                    <input name='email2' type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter email again">
+                    <span class="text-danger">{{ form.email2.errors}}</span>
+                </div>
+                <button type="submit" class="btn btn-primary">Request token</button>
+            </form>
         {% endif %}
-        <form action="" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="emailForToken">Email address</label>
-                <input name='email' type="email" class="form-control" id="emailForToken" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                <span class="text-danger">{{ form.email.errors}}</span>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">(Confirm) Email address</label>
-                <input name='email2' type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter email again">
-                <span class="text-danger">{{ form.email2.errors}}</span>
-            </div>
-            <button type="submit" class="btn btn-primary">Request token</button>
-        </form>
     </div>
 {% endblock %}
