make viewport scale to mobile

--- a/taxonomy/templates/taxonomy/index.html
+++ b/taxonomy/templates/taxonomy/index.html
@@ -98,7 +98,7 @@
         <div class="col-auto d-none d-sm-block d-md-none">
             {% include "taxonomy/pagination_snippet.html" with offset=2 %}
         </div>
-        <div class="col-auto d-none d-xs-block d-sm-none">
+        <div class="col-auto d-block d-sm-none">
             {% include "taxonomy/pagination_snippet.html" with offset=1 %}
         </div>
     </div>
