make taxonomies list table fit mobile displays

--- a/taxonomy/templates/taxonomy/index.html
+++ b/taxonomy/templates/taxonomy/index.html
@@ -41,7 +41,7 @@
 
                 <td>
                     <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#taxid_{{ taxonomy.taxid }}">
-                        Lineage <span class="d-none d-sm-block">(full)</span>
+                        Lineage <span class="d-none d-sm-inline">(full)</span>
                     </button>
 
                     <div class="modal fade" id="taxid_{{ taxonomy.taxid }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
