change label for taxonomies list pages in navbar to make it more descriptive  - remove admin link from navbar

--- a/www/templates/www/base.html
+++ b/www/templates/www/base.html
@@ -37,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if request.get_full_path == '/' %}active{% endif %}">
-                <a class="nav-link" href="{% url 'site-list' %}">Index <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'site-list' %}">Taxonomies <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item {% if request.get_full_path == '/features/' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'site-features' %}">Features</a>
