--- a/taxonomy/templates/www/base.html
+++ b/taxonomy/templates/www/base.html
@@ -37,13 +37,13 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if request.get_full_path == '/' %}active{% endif %}">
-                <a class="nav-link" href="{% url 'site-list' %}">Index <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'site-list' %}">Taxonomies <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item {% if request.get_full_path == '/api/' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'site-api' %}">API</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/">Admin</a>
+                <a class="nav-link" href="http://github.com/voorloopnul/pipetaxon">Documentation</a>
             </li>
         </ul>
         {% if view.filters %}
