change browsable api title

--- a/taxonomy/templates/taxonomy/api.html
+++ b/taxonomy/templates/taxonomy/api.html
@@ -7,7 +7,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">GET /api/taxonomy/</h4>
-                <h6 class="card-subtitle mb-2 text-muted">Return taxonomy information for a given taxid.</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Return the full list of taxonomies in database</h6>
                 <p class="card-text">
                     <b>GET parameters:</b>
                 <ul>
